@@ -5,7 +5,8 @@
 Change log:
 
 * 1.0.3 - ?
-*- Pulled more strings out for translation
+- Pulled more strings out for translation
+- Added About screen
 *- Add translations...
 
 * 1.0.2 - February 27th, 2013
